--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
     "electron-updater": "^6.3.9",
+    "lucide-react": "^0.522.0",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
