--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "axios": "^1.10.0",
     "electron-updater": "^6.3.9",
     "lucide-react": "^0.522.0",
     "react-router-dom": "^7.6.2"
